--- a/loraMesh/loraMesh.html
+++ b/loraMesh/loraMesh.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- ✅ [PWA] Android(Chrome) 설치용 manifest + theme + 아이콘(1개만 사용) -->
-<link rel="manifest" href="/loraMesh/manifest.webmanifest">
+<link rel="manifest" href="/loraMesh/manifest.json">
 <meta name="theme-color" content="#0b1020">
 <link rel="icon" href="/loraMesh/loraMesh.png" type="image/png">
 
