--- a/loraMesh/loraMesh.html
+++ b/loraMesh/loraMesh.html
@@ -6,10 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- ✅ [PWA] Android(Chrome) 설치용 manifest + theme + 아이콘(1개만 사용) -->
-<link rel="manifest" href="/loraMesh/manifest.json">
+<link rel="manifest" href="./manifest.webmanifest">
 <meta name="theme-color" content="#0b1020">
-<link rel="icon" href="/loraMesh/loraMesh.png" type="image/png">
+<link rel="icon" href="./loraMesh.png" type="image/png">
 
+<link rel="apple-touch-icon" href="./loraMesh.png">
 <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 <style>
 
@@ -741,7 +742,7 @@ setInterval(()=>{
 <script>
   if ("serviceWorker" in navigator) {
     window.addEventListener("load", () => {
-      navigator.serviceWorker.register("/loraMesh/sw.js");
+      navigator.serviceWorker.register("./sw.js");
     });
   }
 </script>
